--- a/package.json
+++ b/package.json
@@ -1,36 +1,32 @@
 {
-  "name": "clicktune",
+  "name": "clicktunenew",
   "version": "1.0.0",
-  "description": "deep development",
-  "main": "jscolor.js",
+  "description": "jquery plugin for fast tune complicate css options.",
+  "main": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/maxwebgt/ct2.git"
+    "url": "git+https://github.com/maxwebgt/ct2new.git"
   },
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/maxwebgt/ct2/issues"
+    "url": "https://github.com/maxwebgt/ct2new/issues"
   },
-  "homepage": "https://github.com/maxwebgt/ct2#readme",
+  "homepage": "https://github.com/maxwebgt/ct2new#readme",
   "author": "m.kolesnikov",
   "devDependencies": {
     "browser-sync": "^2.23.6",
     "del": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^5.0.0",
-    "gulp-cache": "^1.0.2",
     "gulp-clean-css": "^3.9.2",
     "gulp-concat": "^2.6.1",
-    "gulp-imagemin": "^4.1.0",
-    "gulp-notify": "^3.2.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-rsync": "0.0.8",
-    "gulp-sass": "^3.1.0",
     "gulp-uglify": "^3.0.0",
-    "gulp-util": "^3.0.8",
-    "vinyl-ftp": "^0.6.1"
+    "gulp-util": "^3.0.8"
+  },
+  "dependencies": {
+    "jquery": "^3.3.1"
   }
 }
